# DocLab

./: README.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  Call.js  Room.js  UserDocs.js  index.css
client/src/Components/: Editor.jsx  HomeNav.js  LoadingSpinner.css  Modal.js  Navbar.js
client/src/Context/: ContentProvider.js  DocProvider.js
client/src/Service/: api.js
client/src/pages/Login/: index.jsx  styles.module.css
client/src/pages/Signup/: index.jsx  styles.module.css
flask_backend/: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.rst  app.py  parrot_module.py  pyproject.toml  requirements.txt  test.py  tokenizer.pickle
flask_backend/.github/workflows/: test.yml
flask_backend/.ipynb_checkpoints/: temp-checkpoint.ipynb
flask_backend/gingerit/: gingerit.py
flask_backend/templates/: index.html
flask_backend/tests/: test_gingerit.py
server/: Controller.js  Routes.js  index.js  package-lock.json  package.json  passport.js
server/controller/: document-controller.js
server/database/: db.js
server/routes/: auth.js
server/schema/: User.js  documentSchema.js  userDocs.js
